<resources>
    <string name="app_name">CPCL</string>
    <string name="app_title">CPCL V1.05.01Test01</string>
    <string name="action_settings">Settings</string>
    <string name="logo_show_time">1500</string>
    <string name="activity_test_page">SELF_TEST</string>
    <string name="activity_test_line">LINE</string>
    <string name="activity_test_box">BOX</string>
    <string name="activity_global_warning">Warning</string>
    <string name="activity_global_yes">Yes</string>
    <string name="activity_global_no">No</string>
    <string name="activity_global_print">Print</string>
    <string name="activity_global_align">Align:</string>
    <string name="activity_global_left_align">Left</string>
    <string name="activity_global_center_align">Center</string>
    <string name="activity_global_right_align">Right</string>
    <string name="activity_global_cmd_send">Printer code is sended.</string>
    <string name="activity_Statues_ready">Ready</string>
    <string name="activity_Statues_nopage">No pager</string>
    <string name="activity_Statues_open">Open the lid</string>
    <string name="activity_Statues_error">Error</string>
    <string name="activity_main_printer">Printer List:</string>
    <string name="activity_main_bt">Bluetooth</string>
    <string name="activity_main_wifi">WIFI</string>
    <string name="activity_main_usb">USB</string>
    <string name="activity_main_setting">Setting</string>
    <string name="activity_main_print_test_page">Print Test Page</string>
    <string name="activity_main_tips">Please connect to printer!</string>
    <string name="activity_main_scan_error">Scan Error!</string>
    <string name="activity_main_scan_success">Scan Success!</string>
    <string name="activity_main_connecterr">Connect Error!</string>
    <string name="activity_main_connected">Connect Success!</string>
    <string name="activity_main_connect_usb_printer">Please connect usb printer.</string>
    <string name="activity_main_close">Close</string>
    <string name="activity_main_originalsize">OriginalSize:</string>
    <string name="activity_main_minifront">MiniFront:</string>
    <string name="activity_main_heightsize">HeightSize:</string>
    <string name="activity_main_widthsize">WidthSize:</string>
    <string name="activity_main_heightwidthsize">HeightWidthSize:</string>
    <string name="activity_main_bold">Blod:</string>
    <string name="activity_main_underline">Underline:</string>
    <string name="activity_main_data_error">Failed to get</string>
    <string-array name="activity_main_sample_2inch_receipt">
        <item>"Sales Order"</item>
        <item>"2013-08-20"</item>
        <item>"Warehouse: Warehouse A on the second floor"</item>
        <item>"Dealer: Xiao Zhang"</item>
        <item>"--------------------------------"</item>
        <item>"name                      amount"</item>
        <item>"--------------------------------"</item>
        <item>"MP-II                    777.00"</item>
        <item>"--------------------------------"</item>
        <item>"MP-III                   888.00"</item>
        <item>"--------------------------------"</item>
        <item>"LP58                     999.00"</item>
        <item>"--------------------------------"</item>
        <item>"Total Amount                 2664.00"</item>
        <item>"--------------------------------"</item>
        <item>"Operator: Administrator"</item>
        <item>"time：2013-08-20 09:30:50"</item>
    </string-array>
    <string name="activity_esc_function_btngetprinterstatus">Get Printer Status</string>
    <string name="activity_esc_function_btnopencashdrawer">Paper Type</string>
    <string name="activity_esc_function_print_type">Product Type</string>
    <string name="activity_esc_function_btnsamplereceipt">Sample Receipt</string>
    <string name="activity_esc_function_btn1dbarcodes">1D Barcodes</string>
    <string name="activity_esc_function_btnqrcode">QR Code</string>
    <string name="activity_esc_function_btnpdf417">PDF417</string>
    <string name="activity_esc_function_btncut">Cut</string>
    <string name="activity_esc_function_btntextformatting">Text Formatting</string>
    <string name="activity_esc_function_btnprintimagefile">Print Image File</string>
    <string name="activity_esc_function_btnprintprnfile">Printer Upgrade</string>
    <string name="activity_esc_function_btnpagemode">Page Mode</string>
    <string name="activity_esc_function_btnexpress">Express</string>
    <string name="activity_esc_function_btnimagemanage">Print Background</string>
    <string name="activity_esc_function_btngetremainingpower">Print SN</string>
    <string name="activity_esc_function_btnReverseFeedNLine">ReverseFeed</string>
    <string-array name="activity_main_papertype">
        <item>Receipt paper</item>
        <item>Label paper</item>
        <item>3 Inch Left Top BM paper</item>
        <item>3 Inch Left BLE BM paper</item>
        <item>Right Top BM paper</item>
        <item>Right BLE BM paper</item>
        <item>Central Top BM paper</item>
        <item>Central BLE BM paper</item>
        <item>2 Inch Left Top BM paper</item>
        <item>2 Inch Left BLE BM paper</item>
    </string-array>
    <string-array name="activity_main_papertype_4inch">
        <item >Receipt paper</item>
        <item >Label paper</item>
        <item >2 Inch BM paper</item>
        <item >3 Inch BM paper</item>
        <item >4 Inch BM paper</item>
    </string-array>
    <string-array name="activity_main_paper_size">
        <item>3 Inch</item>
        <item>4 Inch</item>
    </string-array>
    <string-array name="activity_main_express">
        <item>ST express</item>
        <item>ZT express</item>
        <item>TT express</item>
    </string-array>
    <string name="activity_devicelist_title_paired_devices">Paired devices</string>
    <string name="activity_devicelist_title_other_devices">Other devices</string>
    <string name="activity_devicelist_button_scan">Scan bluetooth</string>
    <string name="activity_devicelist_none_paired">None paired Devices</string>
    <string name="activity_devicelist_scanning">Scanning......</string>
    <string name="activity_devicelist_select_device"> Devices list</string>
    <string name="activity_devicelist_connect">connect</string>
    <string name="activity_devicelist_get_device_err">Get Device Error:</string>
    <string name="activity_devicelist_bond_error">"Bond error!Please bond bluetooth printer in settings panel first."</string>
    <string name="activity_wifi_lblipaddress">IP Address:</string>
    <string name="activity_wifi_lblport">Port:</string>
    <string name="activity_wifi_btnconnect">Connect</string>
    <string name="activity_wifi_btncancel">Cancel</string>
    <string name="activity_wifi_ip">192.168.0.33</string>
    <string name="activity_wifi_port">9100</string>
    <string name="activity_wifi_noIP">Please import IP address</string>
    <string name="activity_setting_codepage">Codepage Setting:</string>
    <string name="activity_setting_cut">Cut Setting:</string>
    <string name="activity_setting_cashdrawer">Casedrawer Setting:</string>
    <string name="activity_setting_buzzer">Buzzer Setting:</string>
    <string name="activity_setting_feed">After print feeds:</string>
    <string name="activity_status_btnrefresh">Refresh</string>
    <string name="activity_status_error">Get printer status error.</string>
    <string name="activity_status_transmit_status_no_paper">No paper.</string>
    <string name="activity_status_transmit_status_has_paper">Has paper.</string>
    <string name="activity_status_real_time_status_paper_near_end">Paper is near end.</string>
    <string name="activity_status_real_time_status_paper_adquate">Adquate paper.</string>
    <string name="activity_status_real_time_status_cover_is_open">Cover is open.</string>
    <string name="activity_status_real_time_status_pressed_feed_button">Pressed Feed Button.</string>
    <string name="activity_status_real_time_status_stopped_no_paper">Stopped because no paper.</string>
    <string name="activity_status_real_time_status_has_error">Printer has error.</string>
    <string name="activity_status_real_time_status_cutter_error">Cutter error.</string>
    <string name="activity_status_real_time_status_unrecoverable_error">Unrecoverable error occurred.</string>
    <string name="activity_status_real_time_status_auto_recoverable_error">Automatically recoverable error.</string>
    <string name="activity_1dbarcodes_btnhelp">Help</string>
    <string name="activity_1dbarcodes_type">Barcode Type:</string>
    <string name="activity_1dbarcodes_data">Barcode Data:</string>
    <string name="activity_1dbarcodes_start_cd">The starting coordinates:</string>
    <string name="activity_1dbarcodes_readable">human readable:</string>
    <string-array name="activity_1dbarcodes_rotation">
        <item>"Horizontal"</item>
        <item>"vertical"</item>
    </string-array>
    <string name="activity_1dbarcodes_narrow">narrow:</string>
    <string name="activity_1dbarcodes_height">Barcode Height:</string>
    <string-array name="activity_1dbarcodes_width">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
    </string-array>
    <string name="activity_1dbarcodes_no_data">Please import  data!</string>
    <string name="activity_1dbarcodes_data_error">import barcode data error！</string>
    <string name="activity_1dbarcodes_UPC_A">075678164125</string>
    <string name="activity_1dbarcodes_UPC_E">01227000009</string>
    <string name="activity_1dbarcodes_JAN13">6901028075831</string>
    <string name="activity_1dbarcodes_JAN8">04210009</string>
    <string name="activity_1dbarcodes_ITF">123456789012</string>
    <string name="activity_1dbarcodes_CODABAR">A40156B</string>
    <string name="activity_1dbarcodes_CODE93">TEST93</string>
    <string name="activity_1dbarcodes_CODE39">123456789</string>
    <string name="activity_1dbarcodes_CODE128">{BS/N:{C\014\042\070\116A</string>
    <string name="activity_cut_fullcut">Full Cut</string>
    <string name="activity_cut_partialcut">Partial Cut</string>
    <string name="activity_cut_fullcutwithfeed">Full Cut With Feed</string>
    <string name="activity_cut_partialcutwithfeed">Partial Cut With Feed</string>
    <string name="activity_cashdrawer_open1">Open #1 Cashdrawer</string>
    <string name="activity_cashdrawer_open2">Open #2 Cashdrawer</string>
    <string name="activity_cashdrawer_open12">Open #1 #2 Cashdrawer</string>
    <string name="activity_image_manage_imageno">Image No：</string>
    <string name="activity_image_manage_btnprint">Print Image</string>
    <string name="activity_image_manage_btndownload">Download Image</string>
    <string name="activity_image_manage_btndeleteone">Delete Image</string>
    <string name="activity_image_manage_btndeleteall">Delete All Image</string>
    <string name="activity_image_manage_txtSpace">Total size:NK,Free size:MK</string>
    <string name="activity_image_manage_txtCounter">Image count:N</string>
    <string name="activity_downloadnv_image">Image Path:</string>
    <string name="activity_downloadnv_btnselectimage">Select Image...</string>
    <string name="activity_downloadnv_download">Download</string>
    <string name="activity_downloadnv_imagesize">Image Size:</string>
    <string name="activity_downloadnv_freesize">Free Size:</string>
    <string name="activity_downloadnv_totalsize">Total Size:</string>
    <string name="activity_font_print">Font Print</string>
    <string name="activity_electricity">Electricity</string>
    <string name="activity_bluetooth_name">Set bluetooth name</string>
    <string name="activity_esc_function_print_self">Print Self</string>
    <string name="activity_double_color_print">Double Color Print</string>
    <string name="activity_voltage">Voltage</string>
    <string name="activity_printer_version">Printer Version</string>
</resources>