<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
	    <TextView
	        android:id="@+id/itemName3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_image_manage_imageno"
	        android:textSize="20.0dip" />
	    <Spinner
	        android:id="@+id/spnImageIndex"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="20.0dip" />
	</LinearLayout>
	    
    <Button
        android:id="@+id/btnPrint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:onClick="onClickPrint"
        android:text="@string/activity_image_manage_btnprint" /> 
    
    <Button
        android:id="@+id/btnDownload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDownload"
        android:text="@string/activity_image_manage_btndownload" /> 
        
    <Button
        android:id="@+id/btnDeleteOne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDeleteOne"
        android:text="@string/activity_image_manage_btndeleteone" /> 
        
    <Button
        android:id="@+id/btnDeleteAll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDeleteAll"
        android:text="@string/activity_image_manage_btndeleteall" /> 

    <TextView
        android:id="@+id/txtSpace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_image_manage_txtSpace"
        android:textSize="20.0dip" />
    
    <TextView
        android:id="@+id/txtCounter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_image_manage_txtCounter"
        android:textSize="20.0dip" />
    
</LinearLayout>