<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_marginTop="2.0dip"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:background="@drawable/selectimage" />

    <LinearLayout 
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
	    <TextView
	        android:id="@+id/itemName3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_downloadnv_image"
	        android:textSize="20.0dip" />
	    <EditText
	        android:id="@+id/txtImageFileName"        
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"  
	        android:textSize="20.0dip" 
	        android:layout_marginRight="2.0dip"
	        android:enabled="false"      
	        android:background="@drawable/my_edittext"/>
	</LinearLayout>
    
    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSelectImage"
        android:text="@string/activity_downloadnv_btnselectimage" />

    <Button
        android:id="@+id/btnPrint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSetting"
        android:text="@string/activity_downloadnv_download" />
    
    <TextView
        android:id="@+id/txtImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_downloadnv_imagesize"
        android:textSize="20.0dip" />
    
    <TextView
        android:id="@+id/txtFressSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_downloadnv_freesize"
        android:textSize="20.0dip" />
    
    <TextView
        android:id="@+id/txtTotalSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_downloadnv_totalsize"
        android:textSize="20.0dip" />              

</LinearLayout>