<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
       
    <Button android:id="@+id/btnOpen1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"      
        android:layout_marginTop="5dip"
        android:onClick="onClickOpen1"
        android:text="@string/activity_cashdrawer_open1"/>
    	    
    <Button android:id="@+id/btnOpen2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:onClick="onClickOpen2"
        android:text="@string/activity_cashdrawer_open2"/>
    
    <Button android:id="@+id/btnOpen12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:onClick="onClickOpen12"
        android:text="@string/activity_cashdrawer_open12"/>
    	            
</LinearLayout>